<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/book_cover"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_detail_title"
            style="@style/DetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/img_detail_photo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:maxLines="3"
            tools:text="Book Title" />

        <TextView
            android:id="@+id/tv_detail_writer"
            style="@style/DetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_title"
            android:layout_toEndOf="@id/img_detail_photo"
            android:layout_marginBottom="2dp"
            android:textSize="12sp"
            android:text="@string/by_pramoedya_ananta_toer" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rt_bar_detail"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_writer"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:progressTint="@android:color/holo_orange_dark"
            android:secondaryProgressTint="#00000000"
            android:layout_toEndOf="@+id/img_detail_photo"
            android:numStars="5"
            tools:rating="2.45"
            android:stepSize="0.01" />

        <TextView
            android:id="@+id/tv_detail_isbn"
            style="@style/DetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rt_bar_detail"
            android:layout_toEndOf="@id/img_detail_photo"
            android:textSize="12sp"
            tools:text="ISBN: XXXXXXXXXXXXX" />

        <TextView
            android:id="@+id/tv_detail_publisher"
            style="@style/DetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_isbn"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/img_detail_photo"
            android:textSize="12sp"
            tools:text="Published by XXXXXXXXXXX" />

        <TextView
            android:id="@+id/tv_detail_buyon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail_photo"
            android:text="@string/buy_on"/>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_buyon"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_about_blibli"
                style="@style/DetailEcommerce"
                android:contentDescription="@string/ecommerce_logo"
                android:src="@drawable/blibli_icon" />

            <ImageView
                android:id="@+id/img_about_shopee"
                style="@style/DetailEcommerce"
                android:contentDescription="@string/ecommerce_logo"
                android:src="@drawable/shopee_icon"/>

            <ImageView
                android:id="@+id/img_about_bukalapak"
                style="@style/DetailEcommerce"
                android:contentDescription="@string/ecommerce_logo"
                android:src="@drawable/bukalapak_icon"/>

            <ImageView
                android:id="@+id/img_about_tokopedia"
                style="@style/DetailEcommerce"
                android:contentDescription="@string/ecommerce_logo"
                android:src="@drawable/tokpoedia_icon"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_button"
            android:layout_marginTop="5dp"
            tools:text="Synopsis: \n " />
    </RelativeLayout>
</ScrollView>